--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
    </head>
  
 <body>
+<p font-size: 24px; align:"right"><a href="https://www.youtube.com/channel/UCtwOZq8DS7IULYbHa7MvLyg">YouTube</a></p>
 <h1> Leos74's page </h1>
 <p align="left"> Hi there! Let's try some CSS styles!</p>
   <script src="js/scripts.js"></script>
