--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
  
 <html lang="en">
 <head>
-  <meta charset="utf-8">
- 
+  <meta http-equiv="content-type" content="text/html; charset=windows-1251" /> 
+  <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
   <title>Leosing the 74</title>
   <meta name="description" content="74ing the page">
   <meta name="leos74" content="random">
@@ -13,7 +13,10 @@
 <body>
 <p font-size: 12px; align="right"><a href="https://www.youtube.com/channel/UCtwOZq8DS7IULYbHa7MvLyg">YouTube</a></p>
 <h1> Leos74's page </h1>
-<p align="left"> Hi there! Let's try some CSS styles!</p>
+<p><img src="images/leocraft.png" width="334" height="557" 
+  alt="Иллюстрация" align="left" 
+  vspace="5" hspace="5"><p align="left"> Привет! Ты попал на мою страничку!</p>
+
   <script src="js/scripts.js"></script>
 </body>
 </html>
