--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  
 <html lang="en">
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=windows-1251" /> 
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" /> 
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
   <title>Leosing the 74</title>
   <meta name="description" content="74ing the page">
@@ -15,7 +15,7 @@
 <h1> Leos74's page </h1>
 <p><img src="images/leocraft.png" width="334" height="557" 
   alt="Иллюстрация" align="left" 
-  vspace="5" hspace="5"><p align="left"> Привет! Ты попал на мою страничку!</p>
+  vspace="5" hspace="5"><p align="left">Hi! My name's Leos (Leonid) and this is my new site. I will do HTML, JavaScript and css experiments here.</p>
 
   <script src="js/scripts.js"></script>
 </body>
