--- a/index.html
+++ b/index.html
@@ -11,12 +11,21 @@
    </head>
  
 <body>
-<p font-size: 12px; align="right"><a href="https://www.youtube.com/channel/UCtwOZq8DS7IULYbHa7MvLyg">YouTube</a></p>
+<p font-size: 12px; align="right"> <a href="https://www.youtube.com/channel/UCtwOZq8DS7IULYbHa7MvLyg">
+ 
+<img border="0" src="images/favicon.ico" />
+<span>YouTube</span>
+ 
+</a>
+</p>
 <h1> Leos74's page </h1>
-<p><img src="images/leocraft.png" width="334" height="557" 
-  alt="Иллюстрация" align="left" 
-  vspace="5" hspace="5"><p align="left">Hi! My name's Leos (Leonid) and this is my new site. I will do HTML, JavaScript and css experiments here.</p>
-
+<p align="left">Hi! My name's Leos (Leonid) and this is my new site. It will be filled with some content soon!</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/OWBdRknF06c?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <script src="js/scripts.js"></script>
+  <p align="left">
+  <footer align="left">
+  Leos74, 2019
+  </footer>
+  </p>
 </body>
 </html>
