menu! videos page

--- a/index.html
+++ b/index.html
@@ -11,18 +11,24 @@
    </head>
  
 <body>
-<p font-size: 12px; align="right"> <a href="https://www.youtube.com/channel/UCtwOZq8DS7IULYbHa7MvLyg">
- 
-<img border="0" src="images/favicon.ico" />
-<span>YouTube</span>
- 
+
+<p>
+<ul>
+ <li><p font-size: 12px> <a href="https://www.youtube.com/channel/UCtwOZq8DS7IULYbHa7MvLyg">
+<img border="0" src="images/favicon.ico" width=32 height=32/>
+YouTube
 </a>
-</p>
+</p></li>
+    <li><a href="videos.html">Videos</a></li>
+    <li><a href="stuff.html">Cool stuff</a></li>
+  </ul>
+  </p>
 <h1> Leos74's page </h1>
 <p align="left">Hi! My name's Leos (Leonid) and this is my new site. It will be filled with some content soon!</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/OWBdRknF06c?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <script src="js/scripts.js"></script>
   <p align="left">
+  
   <footer align="left">
   Leos74, 2019
   </footer>
