updated youtube player

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ YouTube
   </p>
 <h1> Leos74's page </h1>
 <p align="left">Hi! My name's Leos (Leonid) and this is my new site. It will be filled with some content soon!</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/OWBdRknF06c?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/OWBdRknF06c?autoplay=1&controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="border: 5px dashed; color: #007259"></iframe>
   <script src="js/scripts.js"></script>
   <p align="left">
   
