--- a/stuff.html
+++ b/stuff.html
@@ -20,7 +20,7 @@ YouTube
 </a>
 </p></li>
     <li><a href="index.html">Home</a></li>
-    <li><a href:"video.html">Videos</a></li>
+    <li><a href:"videos.html">Videos</a></li>
   </ul>
   </p>
 <h1> Random Stuff </h1>
