--- a/stuff.html
+++ b/stuff.html
@@ -28,7 +28,7 @@ YouTube
   <script src="js/scripts.js"></script>
   <p align="left">
   
-  <footer align="left" font-size: 7px>
+  <footer align="left" font-size=7px>
   Leos74, 2019
   </footer>
   </p>
