--- a/videos.html
+++ b/videos.html
@@ -20,7 +20,7 @@ YouTube
 </a>
 </p></li>
     <li><a href="index.html">Home</a></li>
-    <li><a href:"stuff.html">Cool stuff</a></li>
+    <li><a href="stuff.html">Cool stuff</a></li>
   </ul>
   </p>
 <h1> Videos </h1>
