--- a/stuff.html
+++ b/stuff.html
@@ -2,7 +2,7 @@
  
 <html lang="en">
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" /> 
+  <meta http-equiv="content-type" content="text/html; charset=windows-1251" /> 
   <link rel="shortcut icon" href="/images/youtube.ico" type="image/x-icon">
   <title>Random stuff from Leos74</title>
   <meta name="description" content="74ing the page">
@@ -12,7 +12,7 @@
  
 <body>
 
-
+<div class="main">
 <h1> Random Stuff </h1>
 <p>
 <ul>
@@ -25,7 +25,7 @@ YouTube
     <li><a href="videos.html">Videos</a></li>
   </ul>
   </p>
-<p align="left">Random stuff from Leos74!</p>
+<p align="left">Страница в разработке.</p>
   <script src="js/scripts.js"></script>
   <p align="left">
   
@@ -33,5 +33,15 @@ YouTube
   Leos74, 2019
   </footer>
   </p>
+  <div class="hrup"></div> 
+  <div class="news">
+  <p>
+  <h1>Самодельная механическая клавиатура</h1> <img src="https://i.imgur.com/1jI7wVR.png" alt="RGB механика" width="482" height="178" align="right"/>
+<p>&nbsp;*клик* *клик* *клик*</p> 
+<h3>"Зачем механика? Я вот сижу с клавой за 5$ и норм"</h3>
+<p>&nbsp;Мембранные клавиатуры дешевые, собственно почему и популярные. Однако из-за их техноглогии (резиновая мембрана), они кажутся "хлипкими": клавиши болтаются, а нажатие неравномерное.</p>
+</p>
+</div>
+<div class="hrdown">
 </body>
 </html>
