--- a/stuff.html
+++ b/stuff.html
@@ -2,7 +2,7 @@
  
 <html lang="en">
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=windows-1251" /> 
+  <meta http-equiv="content-type" content="text/html; charset="windows-1251" /> 
   <link rel="shortcut icon" href="/images/youtube.ico" type="image/x-icon">
   <title>Random stuff from Leos74</title>
   <meta name="description" content="74ing the page">
