--- a/stuff.html
+++ b/stuff.html
@@ -25,7 +25,7 @@ YouTube
     <li><a href="videos.html">Videos</a></li>
   </ul>
   </p>
-<p align="left">Страница в разработке.</p>
+<p align="left">РЎС‚СЂР°РЅРёС†Р° РІ СЂР°Р·СЂР°Р±РѕС‚РєРµ.</p>
   <script src="js/scripts.js"></script>
   <p align="left">
   
@@ -36,10 +36,10 @@ YouTube
   <div class="hrup"></div> 
   <div class="news">
   <p>
-  <h1>Самодельная механическая клавиатура</h1> <img src="https://i.imgur.com/1jI7wVR.png" alt="RGB механика" width="482" height="178" align="right"/>
-<p>&nbsp;*клик* *клик* *клик*</p> 
-<h3>"Зачем механика? Я вот сижу с клавой за 5$ и норм"</h3>
-<p>&nbsp;Мембранные клавиатуры дешевые, собственно почему и популярные. Однако из-за их техноглогии (резиновая мембрана), они кажутся "хлипкими": клавиши болтаются, а нажатие неравномерное.</p>
+  <h1>РЎР°РјРѕРґРµР»СЊРЅР°СЏ РјРµС…Р°РЅРёС‡РµСЃРєР°СЏ РєР»Р°РІРёР°С‚СѓСЂР°</h1> <img src="https://i.imgur.com/1jI7wVR.png" alt="RGB РјРµС…Р°РЅРёРєР°" width="482" height="178" align="right"/>
+<p>&nbsp;*РєР»РёРє* *РєР»РёРє* *РєР»РёРє*</p> 
+<h3>"Р—Р°С‡РµРј РјРµС…Р°РЅРёРєР°? РЇ РІРѕС‚ СЃРёР¶Сѓ СЃ РєР»Р°РІРѕР№ Р·Р° 5$ Рё РЅРѕСЂРј"</h3>
+<p>&nbsp;РњРµРјР±СЂР°РЅРЅС‹Рµ РєР»Р°РІРёР°С‚СѓСЂС‹ РґРµС€РµРІС‹Рµ, СЃРѕР±СЃС‚РІРµРЅРЅРѕ РїРѕС‡РµРјСѓ Рё РїРѕРїСѓР»СЏСЂРЅС‹Рµ. РћРґРЅР°РєРѕ РёР·-Р·Р° РёС… С‚РµС…РЅРѕРіР»РѕРіРёРё (СЂРµР·РёРЅРѕРІР°СЏ РјРµРјР±СЂР°РЅР°), РѕРЅРё РєР°Р¶СѓС‚СЃСЏ "С…Р»РёРїРєРёРјРё": РєР»Р°РІРёС€Рё Р±РѕР»С‚Р°СЋС‚СЃСЏ, Р° РЅР°Р¶Р°С‚РёРµ РЅРµСЂР°РІРЅРѕРјРµСЂРЅРѕРµ.</p>
 </p>
 </div>
 <div class="hrdown">
