--- a/ads.html
+++ b/ads.html
@@ -1,1 +1,1 @@
-  <meta http-equiv="refresh" content="0; url="https://vk.com/@ytdesign25-ads"/>
+  <meta http-equiv="refresh" content="0; url=https://vk.com/@ytdesign25-ads"/>
