Update + new look

--- a/index.html
+++ b/index.html
@@ -4,33 +4,33 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" /> 
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-  <title>Leosing the 74</title>
-  <meta name="description" content="74ing the page">
-  <meta name="leos74" content="random">
+  <title>Leos74 / Леос74</title>
+  <meta name="Леос74" content="описание и ссылки">
+  <meta name="leos74" content="ссылки на леоса">
   <link rel="stylesheet" href="styles.css">
    </head>
  
 <body>
 
 <h1> Leos74's page </h1>
-<p>
+
 <ul>
- <li><p font-size: 12px> <a href="https://www.youtube.com/channel/UCtwOZq8DS7IULYbHa7MvLyg">
+ <li><p font-size: 12px> <a href="https://www.youtube.com/leos74">
 <img border="0" src="images/favicon.ico" width=32 height=32/>
-YouTube
+Youtube
 </a>
 </p></li>
-    <li><a href="videos.html">Videos</a></li>
-    <li><a href="stuff.html">Cool stuff</a></li>
+    <li><a href="videos.html">Live</a></li>
+    <li><a href="stuff.html">Cool Stuff</a></li>
   </ul>
   </p>
-<p align="left">Hi! My name's Leos (Leonid) and this is my new site. It will be filled with some content soon!</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/OWBdRknF06c?autoplay=1&controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="border: 5px dashed; color: #007259"></iframe>
+<p align="left">Привет! Меня зовт Leos (Леонид). Я увлекаюсь монтажом видео, редактированием картиночек и стримингом. По ссылочкам выше ты можешь найти моё творчество.</p>
+<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/OWBdRknF06c?autoplay=1&controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="border: 5px dashed; color: #007259"></iframe> -->
   <script src="js/scripts.js"></script>
   <p align="left">
   
   <footer align="left">
-  Leos74, 2019
+  Leos74, 2020
   </footer>
   </p>
 </body>
