--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 Youtube
 </a>
 </p></li>
-    <li><a href="videos.html">Live</a></li>
+    <li><a href="https://www.youtube.com/channel/UCejygMg660cBxuaPwSkb1_A">Live</a></li>
     <li><a href="stuff.html">Cool Stuff</a></li>
   </ul>
   </p>
