--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    </head>
  
 <body>
-
+<div class="maine">
 <h1> Leos74's page </h1>
 
 <ul>
@@ -24,6 +24,7 @@ Youtube
     <li><a href="stuff.html">Cool Stuff</a></li>
   </ul>
   </p>
+ </div> 
 <p align="left">Привет! Меня зовут Leos (Леонид). Я увлекаюсь монтажом видео, редактированием картиночек и стримингом. По ссылочкам выше ты можешь найти моё творчество.</p>
 <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/OWBdRknF06c?autoplay=1&controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="border: 5px dashed; color: #007259"></iframe> -->
   <script src="js/scripts.js"></script>
