--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" /> 
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-  <title>Leos74 / Леос74</title>
+  <title>Leos74</title>
   <meta name="Леос74" content="описание и ссылки">
   <meta name="leos74" content="ссылки на леоса">
   <link rel="stylesheet" href="styles.css">
