bye bye site, redirect now

--- a/index.html
+++ b/index.html
@@ -1,38 +1,1 @@
-<!doctype html>
- 
-<html lang="en">
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" /> 
-  <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-  <title>Leos74</title>
-  <meta name="Леос74" content="описание и ссылки">
-  <meta name="leos74" content="ссылки на леоса">
-  <link rel="stylesheet" href="styles.css">
-   </head>
- 
-<body>
-<div class="maine">
-<h1> Leos74's page </h1>
-
-<ul>
- <li><p font-size: 12px> <a href="https://www.youtube.com/leos74">
-<img border="0" src="images/favicon.ico" width=32 height=32/>
-Youtube
-</a>
-</p></li>
-    <li><a href="https://www.youtube.com/channel/UCejygMg660cBxuaPwSkb1_A">Live</a></li>
-    <li><a href="stuff.html">Cool Stuff</a></li>
-  </ul>
-  </p>
- </div> 
-<p align="left">Привет! Меня зовут Leos (Леонид). Я увлекаюсь монтажом видео, редактированием картиночек и стримингом. По ссылочкам выше ты можешь найти моё творчество.</p>
-<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/OWBdRknF06c?autoplay=1&controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="border: 5px dashed; color: #007259"></iframe> -->
-  <script src="js/scripts.js"></script>
-  <p align="left">
-  
-  <footer align="left">
-  Leos74, 2020
-  </footer>
-  </p>
-</body>
-</html>
+<meta http-equiv="refresh" content="0; url=https://www.youtube.com/channel/UCN1IXMP5z0nV8EepPclX2sQ"/>
